--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ body {
 }
 
 .bg {
-    background: url("https://images.unsplash.com/photo-1576161787924-01bb08dad4a4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2104&q=80");
-    
+    background-image: url("assets/images/103-the-legend-of-zelda-breath-of-the-wild-hd-wallpapers-4.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+}
+
+.loading-text{
+    position: absolute;
+    font-size: 30px;
 }
