--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
     height: 100vh;
     width: 100vw;
     position: absolute;
+    filter: blur(20px);
+    transition: 30px ease-in;
 }
 
 .loading-text{
